Add ML references

--- a/src/eco.bib
+++ b/src/eco.bib
@@ -1,3 +1,91 @@
+@article{Hoyle2011AccountingDrugLife,
+  title = {Accounting for the {{Drug Life Cycle}} and {{Future Drug Prices}} in {{Cost-Effectiveness Analysis}}:},
+  shorttitle = {Accounting for the {{Drug Life Cycle}} and {{Future Drug Prices}} in {{Cost-Effectiveness Analysis}}},
+  author = {Hoyle, Martin},
+  year = 2011,
+  month = jan,
+  journal = {PharmacoEconomics},
+  volume = {29},
+  number = {1},
+  pages = {1--15},
+  issn = {1170-7690},
+  doi = {10.2165/11584230-000000000-00000},
+  urldate = {2025-11-23},
+  abstract = {Economic evaluations of health technologies typically assume constant real drug prices and model only the cohort of patients currently eligible for treatment. It has recently been suggested that, in the UK, we should assume that real drug prices decrease at 4\% per annum and, in New Zealand, that real drug prices decrease at 2\% per annum and at patent expiry the drug price falls. It has also recently been suggested that we should model multiple future incident cohorts. In this article, the cost effectiveness of drugs is modelled based on these ideas.},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\FYHBZRT3\Hoyle - 2011 - Accounting for the Drug Life Cycle and Future Drug Prices in Cost-Effectiveness Analysis.pdf}
+}
+
+@book{Geron2025HandsOnMachineLearning,
+  title = {Hands-{{On Machine Learning}} with {{Scikit-Learn}} and {{Pytorch}}: {{Concepts}}, {{Tools}}, and {{Techniques}} to {{Build In Concepts}}, {{Tools}}, and {{Techniques}} to {{Build Intelligent Systems}}},
+  shorttitle = {Hands-{{On Machine Learning}} with {{Scikit-Learn}} and {{Pytorch}}},
+  author = {G{\'e}ron, Aur{\'e}lien},
+  year = 2025,
+  publisher = {O'Reilly Media},
+  address = {US},
+  abstract = {The potential of machine learning today is extraordinary, yet many aspiring developers and tech professionals find themselves daunted by its complexity. Whether you're looking to enhance your skill set and apply machine learning to real-world projects or are simply curious about how AI systems function, this book is your jumping-off place. With an approachable yet deeply informative style, author Aur\'elien G\'eron delivers the ultimate introductory guide to machine learning and deep learning. Drawing on the Hugging Face ecosystem, with a focus on clear explanations and real-world examples, the book takes you through cutting-edge tools like Scikit-Learn and PyTorch--from basic regression techniques to advanced neural networks. Whether you're a student, professional, or hobbyist, you'll gain the skills to build intelligent systems. Understand ML basics, including concepts like overfitting and hyperparameter tuning Complete an end-to-end ML project using scikit-Learn, covering everything from data exploration to model evaluation Learn techniques for unsupervised learning, such as clustering and anomaly detection Build advanced architectures like transformers and diffusion models with PyTorch Harness the power of pretrained models--including LLMs--and learn to fine-tune them Train autonomous agents using reinforcement learning},
+  isbn = {979-8-3416-0795-8},
+  langid = {english},
+  annotation = {OCLC: 1547124475}
+}
+
+@article{Zaidi2024DriveCommercialSuccess,
+  title = {Drive {{Commercial Success}} by {{Effectively Navigating Loss}} of {{Exclusivity}}},
+  author = {Zaidi, Qasim and Schur, Eduardo and Rao, Shashank},
+  year = 2024,
+  journal = {EY}
+}
+
+@article{Nikolopoulos2016ForecastingBrandedGeneric,
+  title = {Forecasting {{Branded}} and {{Generic Pharmaceuticals}}},
+  author = {Nikolopoulos, Konstantinos and Buxton, Samantha and Khammash, Marwan and Stern, Philip},
+  year = 2016,
+  month = apr,
+  journal = {International Journal of Forecasting},
+  volume = {32},
+  number = {2},
+  pages = {344--357},
+  issn = {01692070},
+  doi = {10.1016/j.ijforecast.2015.08.001},
+  urldate = {2025-11-23},
+  abstract = {We forecast UK pharmaceutical time series before and after the time of patent expiry. This is a critical point in the lifecycle, as a generic form of the product is then introduced into the market, while the branded form is still available for prescription. Forecasting the numbers of units of branded and generic forms of pharmaceuticals dispensed is becoming increasingly important, due to their huge market value and the limited number of new `blockbuster' branded drugs, as well as the imposed cost for national healthcare systems like the NHS. In this paper, eleven methods are used to forecast drug time series, including diffusion models (Bass model \& RPDM), ARIMA, exponential smoothing (Simple and Holt), na\"ive and regression methods. ARIMA and Holt produce accurate short term (annual) forecasts for branded and generic drugs respectively, while for the more strategic horizons of 2--5 years ahead, na\"ive with drift provides the most accurate forecasts.},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\D88ESYNM\Nikolopoulos et al. - 2016 - Forecasting branded and generic pharmaceuticals.pdf}
+}
+
+@article{Park2025PredictingBrandShare,
+  title = {Predicting {{Brand Share After LoE}} in {{Chronic Disease Market Using Machine Learning}}},
+  author = {Park, Seho and Lee, Kahyun},
+  year = 2025,
+  month = oct,
+  journal = {The European Journal of Health Economics},
+  issn = {1618-7598, 1618-7601},
+  doi = {10.1007/s10198-025-01845-9},
+  urldate = {2025-11-23},
+  abstract = {Loss of Exclusivity (LOE) marks a turning point for brand-name drugs, triggering rapid share erosion as generics enter the market. Yet existing forecasting methods---often based on simple parametric decay curves---struggle with data scarcity, suffer from low predictive accuracy, and fail to capture counter-trend share rebounds. In this study, we assemble a 20-year panel of chronic-disease LOE events in South Korea (Hypertension, Lipidemia, Diabetes) and evaluate a range of forecasting algorithms, from classical machine learning to cutting-edge neural networks. Our best-in-class N-BEATS model predicts absolute brand share with an RMSE of .034 and MAPE of .073, while a Random Forest achieves an RMSE of .014 and MAPE of .147 for quarter-to-quarter changes. Notably, our approach successfully captures rare post-LOE share recoveries that traditional parametric benchmarks miss. SHAP analysis reveals that the number of generics is the dominant driver of absolute share levels, whereas time since LOE most strongly influences short-term fluctuations; additionally, brand-holder partnerships with local distributors meaningfully affect both outcomes. These findings lay the groundwork for a data-driven, practical forecasting framework---enabling patent holders and generic manufacturers to align lifecycle and market-access strategies with the key levers of post-LOE dynamics---and point toward even more robust insights as larger LOE datasets become available in future research.},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\MN5D94WL\Park and Lee - 2025 - Predicting brand share after LOE in chronic disease market using machine learning.pdf}
+}
+
+@article{Zhu2021DemandForecastingSupplyChain,
+  title = {Demand {{Forecasting}} with {{Supply}}-{{Chain Information}} and {{Machine Learning}}: {{Evidence}} in the {{Pharmaceutical Industry}}},
+  shorttitle = {Demand {{Forecasting}} with {{Supply}}-{{Chain Information}} and {{Machine Learning}}},
+  author = {Zhu, Xiaodan and Ninh, Anh and Zhao, Hui and Liu, Zhenming},
+  year = 2021,
+  month = sep,
+  journal = {Production and Operations Management},
+  volume = {30},
+  number = {9},
+  pages = {3231--3252},
+  issn = {1059-1478, 1937-5956},
+  doi = {10.1111/poms.13426},
+  urldate = {2025-11-23},
+  abstract = {Accurate demand forecasting is critical for supply chain efficiency, especially for the pharmaceutical (pharma) supply chain due to its unique characteristics. However, limited data have prevented forecasters from pursuing advanced models. Such problems exist even when long history of demand data is available because historical data in the distant past may bring little value as market situation changes. In the meantime, demands are also affected by many hidden factors that again require a large amount of data and more sophisticated models to capture. We propose to overcome these challenges by a novel demand forecasting framework which ``borrows'' time series data from many other products (cross-series training) and trains the data with advanced machine learning models (known for detecting patterns). We further improve performance of the cross-series models through various ``grouping" schemes, and learning from non-demand features such as downstream inventory data across different products, information of supply chain structure, and relevant domain knowledge. We test our proposed framework with many modeling possibilities on two large datasets from major pharma manufacturers and our results show superior performance. Our work also provides empirical evidence of the value of downstream inventory information in the context of demand forecasting. We conduct prior and post-hoc field work to ensure the applicability of the proposed forecasting approach.},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\8PREZG75\Zhu et al. - 2021 - Demand Forecasting with Supply‐Chain Information and Machine Learning Evidence in the Pharmaceutica.pdf}
+}
+
+
 @article{Andrews1999EstimationWhenParameter,
   title = {Estimation {{When}} a {{Parameter}} Is on a {{Boundary}}},
   author = {Andrews, Donald W.K.},
