Add DOI information to index page

--- a/docs/slides/methods/evaluating-ml-algorithms.qmd
+++ b/docs/slides/methods/evaluating-ml-algorithms.qmd
@@ -457,6 +457,12 @@ Entry point for running simulation on classification with class imbalance.
 Overall goal of simulation: evaluate effect of various techniques for dealing
 with unbalanced classes in binary classification problems.
 
+The code compares correction techniques in terms of precision, recall, and the
+F_1 score. Techniques considered:
+    - Not doing anything.
+    - SMOTE (synthetic oversampling).
+    - Introducing class weights in the criterion function.
+
 Usage:
     python -X gil=0 main.py
 
@@ -474,9 +480,9 @@ def main():
     # Create and run the orchestrator
     orchestrator = SimulationOrchestrator(scenarios, n_workers=4)
     orchestrator.run_all()
-
-    # Print results to the console
     combined_results = pd.concat(orchestrator.summary_results.values())
+
+    # Print key results as a markdown table
     print(
         combined_results.groupby(by=["algorithm", "n_training", "first_class_weight"])[
             ["precision_1", "recall_1", "f1_1"]
@@ -524,7 +530,7 @@ Last point: previously handled by `SimulationOrchestrator`, but now more appropr
 """
 Simulation runner for evaluating prediction algorithms via Monte Carlo.
 
-Classes: 
+Classes:
     - SimulationRunner: executes simulation scenario, potentially in parallel.
 """
 
@@ -540,16 +546,16 @@ from simulation_infrastructure.protocols import AlgorithmProtocol, DGPProtocol
 
 class SimulationRunner:
     """Runs Monte Carlo simulations for a given DGP and list of algorithms.
-    
+
     Attributes:
         dgp_type (Type[DGPProtocol]): class of the Data Generating Process.
         dgp_kwargs (dict[str, Any]): keyword arguments for initializing the DGP.
         algorithm_types (list[Type[AlgorithmProtocol]]): list of algorithm classes.
-        algorithm_kwargs_list list[dict[str, Any]]): list of keyword argument 
-            dictionaries for initializing each algorithm, ordered in the same 
+        algorithm_kwargs_list list[dict[str, Any]]): list of keyword argument
+            dictionaries for initializing each algorithm, ordered in the same
             order as algorithm_types
-        n_simulations (int): number of Monte Carlo simulations.
-        n_workers (int): number of threads for parallel execution.
+        n_simulations (int): number of Monte Carlo simulations. Defaults to 1000.
+        n_workers (int): number of threads for parallel execution. Defaults to 1.
     """
 
     def __init__(
@@ -560,7 +566,7 @@ class SimulationRunner:
         algorithm_kwargs_list: list[dict[str, Any]],
         n_simulations: int = 1000,
         n_workers: int = 1,
-    ): 
+    ):
         self.dgp_type = dgp_type
         self.dgp_kwargs = dgp_kwargs
         self.algorithm_types = algorithm_types
@@ -571,7 +577,7 @@ class SimulationRunner:
 
     def _run_single_simulation(self, seed: int) -> dict[str, Any]:
         """Run a single Monte Carlo simulation for all algorithms.
-        
+
         Args:
             seed (int): seed for data sampling
         """
@@ -589,7 +595,6 @@ class SimulationRunner:
             algo.fit(X_train, y_train)
             y_pred = algo.predict(X_test)
 
-
             accuracy = accuracy_score(y_test, y_pred)
             precision_0 = precision_score(y_test, y_pred, pos_label=0, zero_division=0)
             recall_0 = recall_score(y_test, y_pred, pos_label=0, zero_division=0)
@@ -598,7 +603,7 @@ class SimulationRunner:
             f1_0 = f1_score(y_test, y_pred, pos_label=0, zero_division=0)
             f1_1 = f1_score(y_test, y_pred, pos_label=1, zero_division=0)
 
-            result_key = dgp.name + " + " + algo.name 
+            result_key = dgp.name + " + " + algo.name
             sim_results[result_key] = {
                 "n_training": dgp.n_train_samples,
                 "first_class_weight": dgp.weights[0],
@@ -615,7 +620,7 @@ class SimulationRunner:
 
     def run_all(self) -> pd.DataFrame:
         """Run all simulations in parallel and return aggregated results.
-        
+
         Returns:
             pd.DataFrame: DataFrame with simulation results.
         """
@@ -670,7 +675,9 @@ class LogisticRegressionSK:
     Attributes:
         name (str): name for reporting purposes.
         class_weight (str | None): optional class weights for imbalanced datasets.
-        model (sklearn.linear_model.LogisticRegression): logistic regression model.
+            Defaults to None (no weighting).
+        model (sklearn.linear_model.LogisticRegression): an sklearn logistic
+            regression model.
     """
 
     def __init__(
@@ -710,14 +717,14 @@ class LogisticRegressionSMOTE:
 
     Attributes:
         name (str): name for reporting purposes.
-        model (ImbPipeline): Pipeline combining SMOTE oversampling and logistic regression.
+        model (imblearn.pipeline.ImbPipeline): pipeline combining SMOTE 
+            oversampling and logistic regression.
     """
 
     def __init__(
         self,
         random_state: int | None = None,
     ) -> None:
-        """Initialize the logistic regression with SMOTE algorithm."""
         self.name = "Logistic Regression with SMOTE"
         self.model = ImbPipeline(
             [
